--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Copy Domain</title>
     <link rel="stylesheet" href="index.css">
     <script defer src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <div class="box">
