--- a/app.html
+++ b/app.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copy Domain</title>
-    <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="app.css">
+    <script defer src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
